feat: 切换安全会话鉴权并升级字体分片与前端防护